--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "express": "3.4.8",
     "pug": "2.0.0-alpha6",
     "strava-v3": "1.14.0",
-    "passport-strava-oauth2": "0.1.3"
+    "passport-strava-oauth2": "0.1.3",
+    "azure-storage": "2.5.0"
    }
 }
