--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
     "start": "node app.js"
   },
   "dependencies": {
-    "express": "3.4.8",
-    "pug": "2.0.0-alpha6",
-    "strava-v3": "1.14.0",
-    "passport-strava-oauth2": "0.1.3",
     "azure-storage": "2.5.0",
-    "jquery":"^3.3.1",
-    "leaflet": "^1.3.1"
+    "express": "3.4.8",
+    "jquery": "^3.3.1",
+    "leaflet": "^1.3.1",
+    "npm": "^6.2.0",
+    "passport-strava-oauth2": "0.1.3",
+    "pug": "2.0.0-alpha6",
+    "strava-v3": "1.14.0"
   }
 }
