--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
   },
   "dependencies": {
     "azure-storage": "2.5.0",
+    "chart.js": "^2.7.2",
     "express": "3.4.8",
     "jquery": "^3.3.1",
-    "leaflet": "^1.3.1",
-    "npm": "^6.2.0",
+    "leaflet": "^1.3.4",
+    "npm": "^6.4.0",
     "passport-strava-oauth2": "0.1.3",
     "pug": "2.0.0-alpha6",
     "strava-v3": "1.14.0"
